3.3.4/_sources/gallery/pyplots/pyplot_simple.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pyplots/pyplot_simple.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_pyplots_pyplot_simple.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_pyplot_simple.py:


=============
Pyplot Simple
=============

A most simple plot, where a list of numbers is plotted against their index.

.. GENERATED FROM PYTHON SOURCE LINES 8-13

.. code-block:: default

    import matplotlib.pyplot as plt
    plt.plot([1, 2, 3, 4])
    plt.ylabel('some numbers')
    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_pyplot_simple_001.png
    :alt: pyplot simple
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 14-21

------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:

.. GENERATED FROM PYTHON SOURCE LINES 22-27

.. code-block:: default


    import matplotlib
    matplotlib.pyplot.plot
    matplotlib.pyplot.ylabel
    matplotlib.pyplot.show




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function show at 0x7fcc16353310>




.. _sphx_glr_download_gallery_pyplots_pyplot_simple.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: pyplot_simple.py <pyplot_simple.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: pyplot_simple.ipynb <pyplot_simple.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
